logs/pdbparse.log
Listing '.'...
Listing './bin'...
Compiling './bin/pdb_dump.py'...
Compiling './bin/pdb_get_syscall_table.py'...
***   File "./bin/pdb_get_syscall_table.py", line 101
    print "Ordinal %#06x Name: %s Args: %d (%#x bytes) Offset: %#x" % (ordinal, undecorate(function_names[ordinal])[0],
                                                                  ^
SyntaxError: invalid syntax

Compiling './bin/pdb_lookup.py'...
Compiling './bin/pdb_print_ctypes.py'...
***   File "./bin/pdb_print_ctypes.py", line 160
    print "/******* Define basic Windows types *******/"
                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/pdb_print_gvars.py'...
***   File "./bin/pdb_print_gvars.py", line 42
    print "%s,%#x,%d,%s" % (sym.name,imgbase+omap.remap(off+virt_base),sym.symtype,nm)
                       ^
SyntaxError: invalid syntax

Compiling './bin/pdb_print_tpi.py'...
***   File "./bin/pdb_print_tpi.py", line 135
    print "*******  Structures  *******"
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/pdb_tpi_vtypes.py'...
***   File "./bin/pdb_tpi_vtypes.py", line 136
    print "  '%s' : [ %#x, {" % (lf.name, lf.size)
                            ^
SyntaxError: invalid syntax

Compiling './bin/symchk.py'...
***   File "./bin/symchk.py", line 55
    print "Connected. Downloading data..."
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pdbparse'...
Compiling './lib/python3.5/site-packages/pdbparse/peinfo.py'...
***   File "./lib/python3.5/site-packages/pdbparse/peinfo.py", line 7
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pdbparse/postfix_eval.py'...
***   File "./lib/python3.5/site-packages/pdbparse/postfix_eval.py", line 110
    print 'Test %-60s FAILED.' % repr(test)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pdbparse/symlookup.py'...
***   File "./lib/python3.5/site-packages/pdbparse/symlookup.py", line 22
    print "WARN: %s not found" % pdbname
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pdbparse/tpi.py'...
***   File "./lib/python3.5/site-packages/pdbparse/tpi.py", line 1137
    print "Parsed %d types in %f seconds" % (len(tpi_stream.types), ed - st)
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pdbparse-1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
